--- a/src/talks/bib-based.njk
+++ b/src/talks/bib-based.njk
@@ -64,7 +64,7 @@ eleventyComputed: {
 <a  href="/assets/talks/{{poster| urlencode}}" class="buttonlink ">{% icon "pdf", "Poster" %} Poster. </a> 
 {% endif %}
 {% if video %}
-<a href="{{video}}" class="buttonlink abssvg ">{% icon "video", "Video" %} Link to the Video </a> 
+<a href="{{video}}" class="buttonlink abssvg ">{% icon "video", "Video" %} Link to the Video or audio </a> 
 {% endif %}
 
 </div>
