--- a/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
+++ b/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
@@ -34,8 +34,10 @@ tags:
 </p>
   <p class="noindent"><span class="paragraphHead">keywords:</span>  epistemology, immunology, politics
 <hr>
-<h3 class="center"> <a class="buttonlink" href="https://www.philosophy-world-democracy.org/vaccines-germs-and-knowledge"> Free access on the journal website. </a></h3>
 {#
+<h3 class="center"> <a class="buttonlink" href="https://www.philosophy-world-democracy.org/vaccines-germs-and-knowledge"> Free access on the journal website. </a></h3>
+#}
+
 <!-- l. 45 --><p class='indent'>   Vaccines for COVID-19 have led to questions, debates (<a href='#x1-40011'>1<!-- tex4ht:ref: ref1  --></a>), and polemics on both
 their safety and the political and geopolitical dimension of their use. We propose to
 take a step back on both the history of this practice and how current theories in
@@ -86,7 +88,7 @@ adopting the practice.
                  
 <img alt='PIC'  src='Lady-Montagu.jpg'  />
 
-<figcaption class='caption'><span class='id'>Figure 1:</span><span class='content'>Lady Montagu in Turkish dress, Jean-Étienne Liotard, Circa 1756;
+<figcaption class='caption'><span class='content'>Lady Montagu in Turkish dress, Jean-Étienne Liotard, Circa 1756;
 Image credit:Wikimedia Commons</span></figcaption><!-- tex4ht:label?: x1-10011  -->
                                                                   
 
@@ -144,7 +146,7 @@ pathogen.
                                                                   
 <!-- l. 166 --><img alt='PIC' src='minotaurisation.jpg' />
 
-<figcaption class='caption'><span class='id'>Figure 2:</span><span class='content'>Cham, « Croquis », Le Charivari, 3 April 1870. Image credit: Gallica
+<figcaption class='caption'><span class='content'>Cham, « Croquis », Le Charivari, 3 April 1870. Image credit: Gallica
 (BnF).</span></figcaption><!-- tex4ht:label?: x1-10022  -->
                                                                   
 
@@ -319,7 +321,7 @@ sequences).
    <figure class='figure' id='x1-20013'> 
                                                           
 <img alt='PIC'  src='Bernard-Stiegler.jpg'  />
-<figcaption class='caption'><span class='id'>Figure 3:</span><span class='content'><span class='ecti-1000'>Bernard    Stiegler    in    2014     </span><a href='https://commons.wikimedia.org/wiki/User:Lamiot'>Lamiot</a>,     <a href='https://en.wikipedia.org/wiki/en:Creative_Commons'>Creative     Commons</a>
+<figcaption class='caption'><span class='content'><span class='ecti-1000'>Bernard    Stiegler    in    2014     </span><a href='https://commons.wikimedia.org/wiki/User:Lamiot'>Lamiot</a>,     <a href='https://en.wikipedia.org/wiki/en:Creative_Commons'>Creative     Commons</a>
 <a href='https://creativecommons.org/licenses/by-sa/4.0/deed.en'>Attribution-Share Alike 4.0 Internationa</a>l</span></figcaption><!-- tex4ht:label?: x1-20013  -->
                                                                   
 
@@ -372,7 +374,7 @@ itself.
                                                                   
 <!-- l. 416 --><p class='noindent'><img alt='PIC'  src='cow-pock.jpg'  />
 </p>
-<figcaption class='caption'><span class='id'>Figure 4:</span><span class='content'><span class='ecti-1000'>The     Cow-Pock or the     Wonderful     Effects     of     the     New
+<figcaption class='caption'><span class='content'><span class='ecti-1000'>The     Cow-Pock or the     Wonderful     Effects     of     the     New
 </span><span class='ecti-1000'>Inoculation!-</span><a href='https://www.britishmuseum.org/collection/term/BIOG28991'><span class='ecti-1000'>James Gillray</span></a> <span class='ecti-1000'>1802 </span></span></figcaption><!-- tex4ht:label?: x1-30014  -->
                                                                   
 
@@ -492,7 +494,7 @@ populations, and political leaders alike is characteristic of the response to CO
 to do better, theoretical accuracy and a new alliance of scientific and popular
 knowledge is required.
 </p>
-    #}
+    
 
 
 
