--- a/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
+++ b/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
@@ -27,7 +27,7 @@ tweets_mentions:
                                                                             
                                                                             
 <div class='center'>
-<img src='fig1.png' alt='Magritte, Le Bon sens'  width="600" class="zoom darkFilter darkFilterT center"/>
+<img src='fig1.png' alt='Magritte, Le Bon sens'  width="600" class="zoom  darkFilterT center"/>
 <figcaption class='caption'><span class='content'>Magritte, <span class='ecti-1000'>Le Bon sens</span>, 1945. Credit: <a href='https://public.fotki.com/Vakin/aa7ae/1850-1950-/ig552/clio-team-1945-magr-1.html#media'>Fotki</a>.</span></figcaption><!-- tex4ht:label?: x1-21  -->
                                                                             
                                                                     
@@ -148,7 +148,7 @@ this is an explanation of why it is somewhat easy to provide empirical "evidence
 </p>
    <figure class='figure'> 
                                                                             
-<img src='fig2.png' alt='PIC' width="600" class="zoom darkFilter darkFilterT center" />
+<img src='fig2.png' alt='PIC' width="600" class="zoom darkFilterT center" />
 <figcaption class='caption'><span class='content'>XKCD, <span class='ecti-1000'>Significant</span>. Credit: <a href='https://xkcd.com/882/'>XKCD</a>.</span></figcaption><!-- tex4ht:label?: x1-20012  -->
                                                                             
                                                                             
@@ -366,7 +366,7 @@ fundamental mathematical tools in contemporary theoretical physics (Bailly and L
 <a href='#cite.0@bailly2011'>2011</a>).
 </p>
    <figure class='figure'> 
-<img src='fig3.png' alt='PIC' width="400" class="zoom darkFilter darkFilterT center" />
+<img src='fig3.png' alt='PIC' width="400" class="zoom darkFilterT center" />
 <figcaption class='caption'><span class='content'>Emmy Noether. Credit: <a href='https://upload.wikimedia.org/wikipedia/commons/e/e5/Noether.jpg'>Wikimedia</a>.</span></figcaption><!-- tex4ht:label?: x1-40013  -->
                                                                             
                                                                             
@@ -471,7 +471,7 @@ cemeteries.
    <figure class='figure'> 
 
                                                                             
-<img src='fig4.png' alt='PIC' width="600" class="zoom darkFilter darkFilterT center " />
+<img src='fig4.png' alt='PIC' width="600" class="zoom darkFilterT center " />
 <figcaption class='caption'><span class='content'>J. M. W. Turner<span class='ecti-1000'>, Rain, Steam and Speed — The Great Western Railway</span>, 1844.
 Credit: <a href='https://commons.wikimedia.org/wiki/File:Turner_-_Rain,_Steam_and_Speed_-_National_Gallery_file.jpg'>Wikimedia</a>.</span></figcaption><!-- tex4ht:label?: x1-50114  -->
                                                                             
