--- a/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
+++ b/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
@@ -6,6 +6,9 @@ excerpt: "What do mainstream scientists acknowledge as original scientific contr
 tweets_mentions:
   - "1421691329533276162"
   - "1421503714087612418"
+syndication:
+  twitter:  "https://twitter.com/MMontevil/status/1421997260494282756"
+  mastodon: "https://scholar.social/web/statuses/106683778871773829"
 ---
 
 <!--CompileMaths-->
