--- a/src/index.njk
+++ b/src/index.njk
@@ -28,7 +28,7 @@ JSON-LD for:
 <div class="page">
 
   <div class="wrap welcome  h-card">
-    <img src="/assets/me/{{websiteid.image}}" alt="Maël Montévil" class="logo portrait noDarkFilter u-photo " />
+    <img src="/assets/me/{{websiteid.image}}" alt="Maël Montévil" class="logo right portrait noDarkFilter u-photo " />
     <p class="welcome__text" style="  --flow-space: 0em;">Hi, I'm <strong ><a href="/about/" class="welcome__name"> {{websiteid.name}}</a></strong>.</p>
     
     <p class="welcome__text p-note">
