--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -74,6 +74,13 @@
     flex-direction: column;
 
     padding-left: 0.3em;
+  } 
+  summary:marker{
+    color: var(--color-link);
+  }
+  
+  details{
+    color: var(--color-link);
   }
   details ul {
     margin-left: -0.4em;
