--- a/src/_includes/components/header-publication.njk
+++ b/src/_includes/components/header-publication.njk
@@ -32,7 +32,7 @@ hasSup: hasSup,
 
   {% if not  (abstract === undefined) and not  (abstract === "")%}
 <details class=" citation abstract"> 
-     <summary> <h3>Abstract<h3></summary>
+     <summary> <p class="wrap abstractitle">Abstract</p> </summary>
      <div class="abstract wrap p-summary"> <p>  
      {{ abstract  | safe }}</p >
      
