--- a/assets/sass/components/_pubtext.scss
+++ b/assets/sass/components/_pubtext.scss
@@ -326,6 +326,9 @@ div.abstract,
 .head {
   @extend %flowall;
 }
+.abstractitle{
+    font-size: var(--font-size-xl);
+}
 
 .affiliation + .affiliation {
   --flow-space: var(--gap-xs);
