--- a/src/_layouts/archives.njk
+++ b/src/_layouts/archives.njk
@@ -98,6 +98,8 @@ li.aa-Item div.aa-ItemDescription{color: var(--color-primary-darker-1);}
  
  :root {
  --aa-muted-color: var(--color-primary-lighter-2);
+  --aa-muted-color-alpha: 0.1;
+
  --aa-background-color: var(--color-primary-lighter-7);
  
   --aa-base-unit: var(--font-size-m);
