--- a/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
+++ b/src/publications/articles/2021-Montevil-episteme-computational-empiricism/index.njk
@@ -2,6 +2,7 @@
 illust: fig1.png
 hasPDF: false
 hasFullText: true
+date: 2021-07-30
 excerpt: "What do mainstream scientists acknowledge as original scientific contributions, that is,  what is the current épistémè in natural sciences?"
 tweets_mentions:
   - "1421691329533276162"
