--- a/src/publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene/index.njk
+++ b/src/publications/articles/2021-Montevil-Stiegler-Sciences-Entropocene/index.njk
@@ -2,6 +2,7 @@
 excerpt: Bernard Stiegler soulignait l’importance de la question de l’entropie, conduisant au concept d’entropocène. L’auteur introduit et illustre ce concept pour montrer sa pertinence d’un point de vue physique, biologique et social. 
 illust: ecorev-cover.png
 illustClass: darkFilter
+date: 2021-01-30
 tags: 
     - entropy
     - anti-entropy
