--- a/assets/sass/critical.scss
+++ b/assets/sass/critical.scss
@@ -5,6 +5,8 @@
 @use 'global/globals';
 @use 'global/accessibility';
 @use 'global/fonts';
+@use 'components/archives';
+
 @use 'components/avatar';
 @use 'components/card';
 @use 'components/pubcards';
