--- a/src/_includes/archiveTOC.njk
+++ b/src/_includes/archiveTOC.njk
@@ -1,4 +1,12 @@
  
+ 
+{% if currentLang | isnotin(["all","fr","en"]) %} 
+{% set currentLang = "all"%}
+{%endif%}
+ {% if currentType | isnotin(pubtypes.types) %} 
+{% set currentType = "archives"%}
+{%endif%}
+
 <div class="refinements wrap ">
         <div class="ais-Panel lang-list" >
        
@@ -6,15 +14,15 @@
         <ul class="ais-HierarchicalMenu-list">
             {%- for lang in ["all","fr","en"] -%}
             {% if 0 === collections[currentType+lang] | length -%}
-                            <li class="ais-RefinementList-item ">
+                            <li class="ais-HierarchicalMenu-item">
                 
                   {{ lang }}
             {% else %}        {% if lang == currentLang -%}
-                <li class="ais-RefinementList-item  ">
+                <li class="ais-HierarchicalMenu-item ">
                 
                   <a class=" selected-A" href="/all/{{ currentType}}/{% if currentYear %}{{ currentYear}}/{% endif %}{% if currentMonth %}{{ currentMonth}}/{% endif %}">{{ lang }}</a>
               {% else %}
-                <li class="ais-RefinementList-item  "> 
+                <li class="ais-HierarchicalMenu-item "> 
                   <a href="/{{lang}}/{{ currentType }}/">{{ lang }}</a>
               {%- endif -%}{%- endif -%}
                 <span class="ais-RefinementList-count">{{ collections[currentType+lang] | length }}</span>
@@ -27,7 +35,7 @@
        <div class="ais-Panel-header">Types</div>
           <ul class="no-ais-RefinementList-list pubTypes">
             {% for type in pubtypes.types %}
-               <li class="ais-RefinementList-item {% if type in pubtypes.subtypes  -%}  ais-HierarchicalMenu-item2   {% endif %} ">
+               <li class="ais-HierarchicalMenu-item {% if type in pubtypes.subtypes  -%}  ais-HierarchicalMenu-item2   {% endif %} ">
             {% if 0 === collections[type+currentLang] | length -%}
                          
                 
@@ -49,11 +57,11 @@
           <p class=""><a  href="/publications/publicationsbyType/">Complete Publication list by category</a></p>
         </div>
       
-      {#</div><div id="tags-list"></div>#}
+      
       <div id="dates-menu{{append}}" class="ais-Panel">
           
       
-         {#{% block dates %}#}
+       
       
             <div class="ais-Panel-header">Dates</div>
             
