--- a/assets/sass/components/_archives.scss
+++ b/assets/sass/components/_archives.scss
@@ -79,7 +79,7 @@ margin-bottom: var(--gap-ms);
 .ais-HierarchicalMenu-list,
 .no-ais-RefinementList-list {
   margin-block-start: var(--gap-ms);
-
+  margin-block-end: var(--gap-m);
   padding-left: var(--gap-xs);
 
   list-style-type: none;
